--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -76,7 +76,7 @@
               <div class="sub_menu">
                 <ul>
                   <li>
-                    <a routerLink="/risk-management">Risk management</a>
+                    <a routerLink="/risk-management">risk management</a>
                   </li>
                   <li>
                     <a routerLink="/betting-trade-master">Betting Trade Master</a>
@@ -168,9 +168,9 @@
           <a target="_blank" href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D" style="color: black;" aria-label="Visit instagram Profile"> <i
               class="fa-brands fa-instagram"></i></a>
                
-
+              <!-- <div  id="google_translate_element"></div> -->
         </div>
-        <!-- <div  id="google_translate_element"></div> -->
+       
       </div>
       
     </nav>
