--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -45,7 +45,7 @@
 <ul>
 
     <li class="theme_header"><h2 class="theme_header" >B2B (Business 2 Business)</h2></li>
-    <P>our b2c theme is distinguished by its unique features. We've incorporated an additional Parley option for an enriched betting experience.our theme is characterized by the finest color combinations and design elements, ensuring an aesthetically pleasing interface.users are granted permissions to place bets on a wide range of sports including cricket, soccer, and tennis. We also have many different casino games for more entertainment options. Additionally, we feature various types of casinos, such as the AWC Casino, which hosts an impressive collection of over 500 slot games and more than 100 table games.</P>
+    <P>our B2B theme is distinguished by its unique features. We've incorporated an additional Parley option for an enriched betting experience.our theme is characterized by the finest color combinations and design elements, ensuring an aesthetically pleasing interface.users are granted permissions to place bets on a wide range of sports including cricket, soccer, and tennis. We also have many different casino games for more entertainment options. Additionally, we feature various types of casinos, such as the AWC Casino, which hosts an impressive collection of over 500 slot games and more than 100 table games.</P>
   
 
     <li class="theme_header"><h2 class="theme_header" >B2C (Business 2 Customer)</h2></li>
