--- a/src/app/contact-com/contact-com.component.css
+++ b/src/app/contact-com/contact-com.component.css
@@ -177,6 +177,12 @@ width: 33%;
     width: 110% !important;
 
   } */
+
+  .iti {
+    position: relative;
+    display: inline-block;
+    width: 100% !important;
+}
     
 }
 
