--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -1264,6 +1264,7 @@
           <div class="email_label">
             <label for="number"><b>Phone Number</b></label>
           </div>
+          <div class="iti">
           <div class="email_input">
             <input
               value=""
@@ -1277,6 +1278,7 @@
               placeholder="000-000-0000"
               style="padding-left: 74px !important "
             />
+          </div>
           </div>
           <div class="email_label">
             <label for="Message" id="message-label"><b>Message</b></label>
