--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -388,7 +388,7 @@ display: none;
 .casino_row{
     display: flex;
     justify-content: center;
-gap:20px;
+gap:30px;
 }
 
 .casino_header{
@@ -412,7 +412,7 @@ gap:20px;
     color: gray;
 }
 .casino_col{
-    width: 20%;
+    width: 16%;
 }
 .casino_list{
     font-size: 16px;
@@ -420,6 +420,7 @@ gap:20px;
     margin-left: 6px;
     font-family: 'Poppins';
     font-weight: 400;
+    line-height: 30px;
 }
 
 @media (max-width:820px){
