--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -229,7 +229,7 @@ p {
 .footerbanner_content {
   background: linear-gradient(45deg, #FBAE17, #E05526);
   color: #fff;
-  border-radius: 10px;
+  border-radius: 10px; 
   padding: 3% 5%;
   margin: auto;
   max-width: 90%;}
@@ -392,3 +392,256 @@ flex-wrap: wrap;
     padding-top: 38px;}}
 .copy {
   background: rgb(160, 197, 40);}
+
+
+
+
+  body {
+    font-family: sans-serif;
+    font-size: 175%;
+  }
+  
+  .wrap {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  svg {
+    padding: 20px;
+  }
+  
+  #tooltip {
+    padding: 15px;
+    background-color: #eee;
+    color: #9c9c9c;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .land {
+    fill: #ccc;
+    fill-opacity: 1;
+    stroke: white;
+    stroke-opacity: 1;
+    stroke-width: 0.5;
+    transition: 0.2s ease-out;
+  }
+  
+  .land:hover {
+    fill: #a9a9a9;
+  }
+  
+  .tooltip {
+    background-color: #333;
+    color: #fff;
+    padding: 1em;
+  }
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+  
+  
+  
+  
+  
+ 
+  .map {
+    margin-top: 3em;
+    position: relative;
+  }
+  
+  .map__markers {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .map__marker {
+    position: absolute;
+  }
+  
+  .map__marker:after {
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-name: pop;
+    border-radius: 50%;
+    border: 1px solid #A0C528;
+    content: "";
+    height: 2em;
+    left: 0;
+    margin: -0.5em 0 0 -0.5em;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    width: 2em;
+  }
+  
+  .map__marker:hover .map__marker-info {
+    display: block;
+  }
+  
+  .map__marker > a {
+    background-color: #A0C528;
+    border-radius: 50%;
+    height: .6em;
+    display: block;
+    text-indent: -9999px;
+    width: .6em;
+  }
+  
+  .map__marker--chicago {
+    left: 72%;
+    top: 39%;
+  }
+  
+  .map__marker--florida {
+    left: 75%;
+    top: 39%;
+  }
+  
+  .map__marker--florida:after {
+    animation-delay: 3s;
+  }
+  
+  .map__marker--los-angeles {
+    left: 7%;
+    top: 60%;
+  }
+  
+  .map__marker--los-angeles:after {
+    animation-delay: 5s;
+  }
+  
+  .map__marker--new-york {
+    left: 91%;
+    top: 31%;
+  }
+  
+  .map__marker--san-francisco {
+    left: 1%;
+    top: 46%;
+  }
+  
+  .map__marker--san-francisco:after {
+    animation-delay: 3s;
+  }
+  
+  .map__marker--seattle {
+    left: 8%;
+    top: 1%;
+  }
+  
+  .map__marker--seattle:after {
+    animation-delay: 5s;
+  }
+  
+  .map__marker-info {
+    display: none;
+    left: 50%;
+    position: absolute;
+    bottom: 0;
+    transform: translate(-50%, -2em);
+    width: 20em;
+    z-index: 999;
+  }
+  
+  .map__marker-info-header {
+    background-color: #A0C528;
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 0.5em;
+    color: #fff;
+    padding: 0.5em 1em;
+  }
+  
+  .map__marker-info-main {
+    background-color: #fff;
+    border-bottom-left-radius: 0.5em;
+    border-bottom-right-radius: 0.5em;
+    color: #7e7e7e;
+    padding: 0.5em 1em;
+  }
+  
+  .map__marker-info h2 {
+    margin-bottom: 0;
+  }
+  
+  .map__marker-info-inner {
+    border-radius: 0.5em;
+    box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.3);
+    font-size: 0.875em;
+  }
+  
+  .map__marker-info-inner:after {
+    border-left: 0.75em solid transparent;
+    border-right: 0.75em solid transparent;
+    border-top: 1em solid #fff;
+    content: "";
+    height: 0;
+    left: 50%;
+    position: absolute;
+    top: 100%;
+    transform: translateX(-50%);
+    width: 0;
+  }
+  
+  .animate {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+  }
+  
+  @keyframes bounce-in {
+    0%, 20%, 40%, 60%, 80%, 100% {
+      transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    0% {
+      opacity: 0;
+      transform: scale3d(0.3, 0.3, 0.3);
+    }
+    20% {
+      transform: scale3d(1.1, 1.1, 1.1);
+    }
+    40% {
+      transform: scale3d(0.9, 0.9, 0.9);
+    }
+    60% {
+      opacity: 1;
+      transform: scale3d(1.03, 1.03, 1.03);
+    }
+    80% {
+      transform: scale3d(0.97, 0.97, 0.97);
+    }
+    100% {
+      opacity: 1;
+      transform: scale3d(1, 1, 1);
+    }
+  }
+  
+  .animate--bounce-in {
+    animation-duration: 0.75s;
+    animation-name: bounce-in;
+  }
+  .map__marker-info-inner p{
+ 
+    line-height: 27px;
+
+    font-size: 14px;
+  }
