--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -21,7 +21,58 @@
       <h1 style="font-family: Poppins;">Online Gaming Provider</h1>
 
       <div class="about_map">
-        <img src="assets/sirplay-market_2022-1-768x369.png" alt="map" />
+        <div class="map">
+
+    
+          <ul class="map__markers">
+        
+                <li class="map__marker map__marker--chicago">
+                  <a href="#">India</a>
+        
+                  <div class="map__marker-info">
+        
+                    <div class="map__marker-info-inner animate animate--bounce-in">
+                      <header class="map__marker-info-header">
+                        <h2 style="font-size: 1.5rem;">India</h2>
+                      </header>
+        
+                      <main class="map__marker-info-main">
+                        <p><a href="#">Lorem ipsum</a> dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, quae eos modi temporibus vitae nesciunt, quia voluptatem repellat recusandae!</p>
+                      </main>
+                    </div>
+        
+                  </div>
+                </li>
+        
+                <li class="map__marker map__marker--florida">
+                  <a href="#">Bangladesh</a>
+        
+                  <div class="map__marker-info">
+        
+                    <div class="map__marker-info-inner animate animate--bounce-in">
+                      <header class="map__marker-info-header">
+                        <h2 style="font-size: 1.5rem;">Bangladesh</h2>
+                      </header>
+        
+                      <main class="map__marker-info-main">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, quae eos modi temporibus vitae nesciunt, quia voluptatem repellat <a href="#">recusandae</a>!</p>
+                      </main>
+        
+                    </div>
+        
+                  </div>
+                </li>
+        
+        
+              
+               
+        
+          
+              </ul>
+              <img src="assets/sirplay-market_2022-1-768x369 copy.png" alt="map" />
+        
+            </div>
+        <!-- <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=bangladesh&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://connectionsgame.org/">Connections NYT</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:400px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div> -->
       </div>
     </div>
 
@@ -68,10 +119,7 @@
       </p>
       <p>&nbsp;</p>
     </div>
-
     <!-- ====================================================================== -->
-
-   
   </section>
 </div>
   
@@ -316,13 +364,9 @@ We take pride in presenting our clients with the widest selection of games withi
                   <a class="box" href=" https://www.bazi365.live/#/dash" target="_blank">
                     <img src="assets/partner-logo-new/bazi365.webp" alt="bazi365" class="img-fluid partner-image copy">
                   </a>
-                 
-
-
-                  
+ 
                 </div>
              </div>
-
 
           </div>
        </div>
@@ -331,10 +375,5 @@ We take pride in presenting our clients with the widest selection of games withi
 
     </div>
  </div>
-
-
-
-
-  
 
 <app-footer></app-footer>
