--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -8,12 +8,12 @@
         <p class="para_faq">We have answers (Well, most of the times!)</p>
         <p class="freq_param">
           Below you'll find answer to the most common question please check out
-          our <strong> <a
+          our <strong> <a style="color: #1a0dab;"
               href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/"
-              target="_blank">Facebook</a> <a
+              target="_blank">Facebook</a> <a style="color: #25d366;"
               href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0"
-              target="_blank"> Whatsapp</a> <a
-              href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D"> Instagram</a> <a
+              target="_blank"> Whatsapp</a> <a style="color: #C13584;"
+              href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D"> Instagram</a> <a style="color: #00aff0;"
               href="skype:live:9960f32f776599a2?chat"> Skype</a> .</strong> if you still
           can't find the answer you're looking for, just
           <b routerLink="/contact">Contact us ! </b>
