--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -12,7 +12,9 @@
               href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/"
               target="_blank">Facebook</a> <a style="color: #25d366;"
               href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0"
-              target="_blank"> Whatsapp</a> <a style="color: #C13584;"
+              target="_blank"> Whatsapp</a> <a style="background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44);
+              -webkit-text-fill-color: transparent;
+              -webkit-background-clip: text;"
               href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D"> Instagram</a> <a style="color: #00aff0;"
               href="skype:live:9960f32f776599a2?chat"> Skype</a> .</strong> if you still
           can't find the answer you're looking for, just
