--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -67,7 +67,7 @@
     <footer>
       <div class="footer_sec">
         <div class="footer_para">
-          <p style="color: rgba(255, 255, 255, .8);"><span class="vrnl-net">vrnl.net.</span> 2023 All Rights Reserved</p>
+          <p style="color: rgba(255, 255, 255, .8);"> <a href="https://vrnl.net/#/"><span class="vrnl-net" style="cursor: pointer;">vrnl.net</span></a> 2023 All Rights Reserved</p>
         </div>
       </div>
     </footer>
