--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -29,7 +29,7 @@
     <section class="whites_label_sec">
         <div class="whites_c_row whites_label">
             <div class="white_f_col">
-    <img class="tv_image" src="assets/vrnl crypto tv.webp" alt="White label casino">
+    <img class="tv_image" src="assets/vrnl crypto tv2 (1).jpg" alt="White label casino">
             </div>
             <div class="white_f_col_1">
     
