--- a/src/app/i-frame/i-frame.component.css
+++ b/src/app/i-frame/i-frame.component.css
@@ -419,3 +419,6 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .type_para{
   font-weight: 400;
 }
+.sports_para{
+  line-height: 30px;
+}
