--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -108,11 +108,10 @@
         <p class="gaming_para">
           The widest selection of entertainment games available online
           <span class="white_change"routerLink="/casino">White Label Casino </span> with more than
-          10,00 games.
+          1,000 games.
         </p>
         <p class="gaming_para">
-          Fast activation of multiple products and brands, suitable for FIAT
-          and
+          Fast activation of multiple products and brands, suitable for FIAT.
            <!-- <span class="white_change">Crypto casino software.</span> -->
         </p>
         <br />
