--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -44,12 +44,12 @@
   line-height: 1.3;
   text-align: center;
   font-style: normal;
-  font-weight: 600;
-  font-size: 20px;
+  font-weight: 400;
+  font-size: 36.56px;
   font-family: "Raleway",sans-serif;
   width: 100%;
   color: #272727;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .sportsbetting-section1-col1-link {
@@ -66,7 +66,7 @@
 }
 
 .sportsbetting-section1-col1-link a:hover{
-  color: #e42727;
+  color: #d80f0f;
  
   
 }
@@ -2451,9 +2451,9 @@ width: 97%;
     font-size: 16px;
     background-color: white;
     box-shadow: none;
-    padding-top: 1.75em;
+    padding-top: 1.45em;
     padding-right: 2.5em;
-    padding-bottom: 1.75em;
+    padding-bottom: 1.45em;
     padding-left: 2.5em;
     font-size: 0.85em;
     font-style: normal;
@@ -2466,7 +2466,7 @@ width: 97%;
     position: relative;
     overflow: hidden;
     font-family: inherit;
-    font-size: 1.3rem;
+    /* font-size: 1.3rem; */
     font-style: normal;
     font-weight: 600;
     line-height: 0.2;
