--- a/src/app/casino-games/casino-games.component.css
+++ b/src/app/casino-games/casino-games.component.css
@@ -6,7 +6,9 @@
     font-family: Raleway, sans-serif !important;
 }
 
-
+.heading-casino{
+  font-size: 24px;
+}
 
 .container9{
     
@@ -54,6 +56,7 @@ margin-right: calc(-1.999em * -1);
 line-height: 1.3;
 letter-spacing: 0.001em;
 color: #575756;
+margin-bottom: 10px;
 
 }
 
