--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -22,7 +22,7 @@
                 <tbody>
                 <tr>
                 <td colspan="2">
-                <h5 style="font-size: 150%; font-size: 'Raleway', sans-serif !important;"><b>CASINO NUMBERS</b></h5>
+                <h5 style="font-size: 24px; font-size: 'Raleway', sans-serif !important;" ><b class="heading-casino">CASINO NUMBERS</b></h5>
                 </td>
                 </tr>
                 <tr>
