--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -142,7 +142,7 @@
     <div class="sportsbetting-benefits-image">
       <img
         class="images_benefit_1"
-        src="assets/vrnl image 5.webp"
+        src="assets/vrnl image 52.png"
         alt="complete Sports betting software"
       />
     </div>
