--- a/src/app/faq/faq.component.css
+++ b/src/app/faq/faq.component.css
@@ -17,9 +17,9 @@ cursor: pointer;
 text-align: center;
 font-size: 40px !important;
 }
-.faq_header_pgs:hover{
+/* .faq_header_pgs:hover{
     color: #000;
-}
+} */
 
 .para_faq{
     font-family: 'Poppins';
