--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -25,12 +25,12 @@
 
     
           <ul class="map__markers">
-        
                 <li class="map__marker map__marker--chicago">
+
                   <a href="#">India</a>
         
                   <div class="map__marker-info">
-        
+
                     <div class="map__marker-info-inner animate animate--bounce-in">
                       <header class="map__marker-info-header">
                         <h2 style="font-size: 1.5rem;">India</h2>
@@ -41,6 +41,10 @@
                       </main>
                     </div>
         
+                  </div>
+                  <div class="bounce">
+
+                  <i class="fa-solid fa-location-dot loc"></i>
                   </div>
                 </li>
         
@@ -61,6 +65,10 @@
                     </div>
         
                   </div>
+
+                  <div class="bounce1">
+                  <i class="fa-solid fa-location-dot loc1"></i>
+                </div>
                 </li>
         
         
