--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -645,3 +645,106 @@ flex-wrap: wrap;
 
     font-size: 14px;
   }
+
+  .loc{
+  position: absolute;
+  z-index: 999;
+  top: -15px;
+  left: -1px;
+  font-size: 20px;
+  color: #ec0e0e;
+	line-height:60px;
+	text-rendering: auto;
+	-webkit-font-smoothing: antialiased;
+  }
+
+  .loc1{
+    font-size: 20px;
+  color: #ec0e0e; 
+  margin-top: -25px;
+  margin-left: -2px;
+  }
+
+
+  .bounce {
+    position: absolute;
+    bottom: 30px;
+    left: 50% ;
+    /* width: 60px; */
+    /* height: 60px ; */
+    margin-left:-7px;
+    /* border: 2px solid #990000; */
+    -webkit-border-radius:50%;
+    -moz-border-radius:50%;
+    -ms-border-radius:50%;
+    border-radius:50%;
+    animation: bounce 2s infinite;
+    -webkit-animation: bounce 2s infinite;
+    -moz-animation: bounce 2s infinite;
+    -o-animation: bounce 2s infinite;
+  }
+   
+  @-webkit-keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}	
+    40% {-webkit-transform: translateY(-30px);}
+    60% {-webkit-transform: translateY(-15px);}
+  }
+   
+  @-moz-keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {-moz-transform: translateY(0);}
+    40% {-moz-transform: translateY(-30px);}
+    60% {-moz-transform: translateY(-15px);}
+  }
+   
+  @-o-keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {-o-transform: translateY(0);}
+    40% {-o-transform: translateY(-30px);}
+    60% {-o-transform: translateY(-15px);}
+  }
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+    40% {transform: translateY(-30px);}
+    60% {transform: translateY(-15px);}
+  }
+
+  .bounce1{
+    position: absolute;
+    /* bottom: 30px; */
+    left: 50% ;
+    /* width: 60px; */
+    /* height: 60px ; */
+    margin-left:-4px;
+    /* border: 2px solid #990000; */
+    -webkit-border-radius:50%;
+    -moz-border-radius:50%;
+    -ms-border-radius:50%;
+    border-radius:50%;
+    animation: bounce 2s infinite;
+    -webkit-animation: bounce 2s infinite;
+    -moz-animation: bounce 2s infinite;
+    -o-animation: bounce 2s infinite;
+  }
+
+
+  @-webkit-keyframes bounce1 {
+    0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}	
+    40% {-webkit-transform: translateY(-30px);}
+    60% {-webkit-transform: translateY(-15px);}
+  }
+   
+  @-moz-keyframes bounce1 {
+    0%, 20%, 50%, 80%, 100% {-moz-transform: translateY(0);}
+    40% {-moz-transform: translateY(-30px);}
+    60% {-moz-transform: translateY(-15px);}
+  }
+   
+  @-o-keyframes bounce1 {
+    0%, 20%, 50%, 80%, 100% {-o-transform: translateY(0);}
+    40% {-o-transform: translateY(-30px);}
+    60% {-o-transform: translateY(-15px);}
+  }
+  @keyframes bounce1 {
+    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+    40% {transform: translateY(-30px);}
+    60% {transform: translateY(-15px);}
+  }
