--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -121,7 +121,7 @@
               name="countries"
               value=""
               required
-              [(ngModel)]="contact.countries"
+              
            
               class="cot"
             />
@@ -1269,14 +1269,13 @@
           <div class="iti">
           <div class="email_input">
             <input
-            formControlName="phone_number"
+            formControlName="number"
               value=""
               id="phone"
               type="tel"
               name="phone"
               required
               maxlength="10"
-              [(ngModel)]="contact.phone"
              
               placeholder="000-000-0000"
               style="padding-left: 74px !important "
