--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -3199,8 +3199,8 @@ color: #808080;
 }
 .navbar-toggler-icon{
   background-image: var(--bs-navbar-toggler-icon-bg) !important;
-  width: 29px;
-  height: 18px
+  width: 25px;
+  height: 22px;
 }
 /* .navbar>.container-fluid{
   display: block;
@@ -3230,4 +3230,13 @@ color: #808080;
   }
   .accordion-flush .accordion-item .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed {
     font-size: 14px;
+}
+.accordion-button:not(.collapsed){
+  color: #000;
+}
+.accordion-body a {
+  font-size: 15px;
+}
+.accordion-flush .accordion-item .accordion-button{
+padding:11px !important;
 }
