--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -3235,8 +3235,15 @@ color: #808080;
   color: #000;
 }
 .accordion-body a {
-  font-size: 15px;
+  font-size: 14px;
 }
 .accordion-flush .accordion-item .accordion-button{
 padding:11px !important;
+padding-left: 19px !important;
+}
+.accordion-button::after{
+  background-size: 1rem;
+}
+.accordion-body{
+  padding: 9px;
 }
