--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -39,8 +39,8 @@
         
       </div>
 
-      <div class="sportsbetting-section1-button" (click)="scrollToContact()">
-        <button routerLink="/contact">Book a Demo</button>
+      <div class="sportsbetting-section1-button" >
+        <button routerLink="/contact"  class="animated-button">Book a Demo</button>
       </div>
     </div>
 
