--- a/src/app/faq/faq.component.css
+++ b/src/app/faq/faq.component.css
@@ -330,7 +330,7 @@ h2, .h2 {
   line-height: 1.2;
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  margin: 1.25em 0 0.2em;
+  /* margin: 1.25em 0 0.2em; */
   text-rendering: optimizelegibility;
 }
 .ui-widget {
