--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -6,14 +6,14 @@
         <div class="left-text-index3">
             <h2  style="font-weight: bold;">Why choose our Platform</h2>
 
-            <h1 class="left-index3-h1">The world's largest catalogue of 
+            <h1 class="left-index3-h1">The world's most extensive  catalogue of 
             <b style="font-family: 'Raleway', sans-serif; font-size: 40px; font-weight: bold;">Online Casino games</b></h1>
 
-            <p class="left-text-index3-paras"> Our <b style="color: #575756;"> White Label </b>Casino offers to you the widest selection of slots and casino games available online, with over 3000 games.<br><br></p>
+            <p class="left-text-index3-paras"> Our <b style="color: #575756;"> White Label </b>Casino  provides you with an unparalleled selection of over 3,000 slots and casino games, making it the broadest range available online.<br><br></p>
 
-            <p class="left-text-index3-bold" ><b>We supply online gaming operators, bookmakers, lotteries and betting organisations in regulated markets. </b> <br><br></p>
+            <p class="left-text-index3-bold" ><b>We cater to online gaming operators, bookmakers, lotteries, and betting organizations operating in regulated markets.  </b> <br><br></p>
 
-            <p class="left-text-index3-paras">The gaming math is secure and certified by independent gaming laboratory. Therefore, we guarantee the best User Experience to your Players.<br><br></p>
+            <p class="left-text-index3-paras">Our gaming mathematics are not only secure but also certified by independent gaming laboratories. This certification ensures the highest level of user experience for your players, making their gaming experience top-notch.<br><br></p>
 
 
 
