--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -7,10 +7,9 @@
         <div class="index2-col">
             <h1  style="font-family: 'Raleway', sans-serif;">
                 Live Casino software</h1>
-            <p class="index2-col-para1">Our <strong> live Casino platform </strong> allow you to activate the best <strong> live
-                    providers</strong> with <strong>  exceptional quality and math.</strong> </p>
+            <p class="index2-col-para1">Our <strong> live Casino platform </strong>  empowers you to activate  <strong> the top live providers</strong>  known for their  <strong> exceptional quality and mathematical integrity.</strong> </p>
 
-            <p class="index2-col-para2">The Vrnl's Live Casino solution offers to you the <strong> service available today:</strong></p>
+            <p class="index2-col-para2">Vrnl's Live Casino solution provides a comprehensive suite of services, including:</p>
             <ul>
                 <li>Full History Reporting Tools</li>
                 <!-- <li>Payment Methods For Cash, Credit card, Vouchers and many others</li> -->
@@ -23,8 +22,7 @@
             </ul>
 
             
-            <p class="index2-col-para3" ><b>We have developed various integration methods, all highly secure and easy to implement live casino
-                    API.</b></p>
+            <p class="index2-col-para3" ><b>We've developed various secure integration methods, all of which are user-friendly and designed for easy implementation with our live casino API.</b></p>
 
 
             <h3 class="demo-live"><strong > Demo live casino solutions</strong></h3>
@@ -70,8 +68,7 @@
 
     <div class="container7-col2">
         <h2 ><strong style="color: #575756;">live casino API</strong> integrations</h2>
-        <p class="container7-col2-content">It allows you to enable our <strong style="color: #575756;">live casino software</strong> in a few days, furthermore the service
-            is fully managed by us and<strong style="color: #575756;"> we guarantee the widest range of live games available online
+        <p class="container7-col2-content">You can have our live casino software up and running within a matter of days. What's more, we provide comprehensive management services, ensuring that the entire operation is overseen by our experts.<strong style="color: #575756;"> We also guarantee access to the most extensive selection of live games available online.
             </strong></p>
 
     
