--- a/src/app/lottery-games/lottery-games.component.html
+++ b/src/app/lottery-games/lottery-games.component.html
@@ -6,13 +6,14 @@
 
         <div class="index4-left-text">
             <h1 class="left-text-cont1" >Looking for Lottery & Bingo platform?</h1>
-            <h1 class="left-text-cont2">We have selected the best <b style="color: #575756; font-size: 45px;">lottery and bingo</b> games for you.</h1>
+            <h1 class="left-text-cont2">
+                We've carefully chosen the finest  <b style="color: #575756; font-size: 45px;">lottery and bingo</b> games for you.</h1>
 
-            <p  class="index4-para" >Indeed, our <b style="color:#575756; font-size: 16px;">White Label Lottery and Bingo</b> Solution offers to you several attractive variants of the original bingo game and the most popular lottery games.<br><br></p>
+            <p  class="index4-para" >Absolutely, our <b style="color:#575756; font-size: 16px;">White Label Lottery and Bingo</b> Solution presents a range of enticing variants of the classic bingo game along with the most renowned lottery games.<br><br></p>
 
-            <p  class="index4-para" >You can <b style="color:#575756; font-size: 16px; "> play from your smartphone</b> or computer, as we guarantee the greatest user experience as our games are excellent.<br><br></p>
+            <p  class="index4-para" >You can <b style="color:#575756; font-size: 16px; ">enjoy these games from your smartphone </b> or computer, and we ensure an exceptional user experience as our games are of the highest quality.<br><br></p>
 
-            <p class="index4-para" ><strong style="color:#575756; ">The gaming math is secure and certified.<br><br></strong></p>
+            <p class="index4-para" ><strong style="color:#575756; ">Furthermore, our gaming algorithms are both secure and independently certified, providing a reliable and trustworthy gaming experience.<br><br></strong></p>
 
 
 
