--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -8,13 +8,9 @@
         </h1>
         <div class="wpb_text_column wpb_content_element  vc_custom_1673977594688">
           <div class="wpb_wrapper">
-            <p>The <strong>online casino software</strong> is simple as our platform is easy to manage plus you will be
-              competitive by offering <strong>thousands of casino games</strong>. Our staff will assist you in all
-              phases from initial training to production start-up.</p>
-            <p>The marketing team will ensure that your online casino is featured on the front page and we guarantee you
-              high visibility online.</p>
-            <p>The online casino platform will be delivered with ready-to-use games moreover the monitoring tools will
-              give you a clear view of the progress of your new business.</p>
+            <p>Our  <strong>online casino softwar</strong> is designed for simplicity, making it easy to manage. We ensure your competitiveness by offering a wide selection of thousands of casino games. Our dedicated staff will provide comprehensive support throughout every stage of the process, from initial training to the launch of your casino.</p>
+            <p>Our marketing team will work diligently to ensure that your online casino receives prominent placement on the front page, guaranteeing high visibility in the online market.</p>
+            <p> online casino platform will come equipped with a variety of pre-configured games, and our monitoring tools will provide you with a clear, real-time overview of the progress and performance of your new venture.</p>
             <p>&nbsp;</p>
 
 
@@ -50,12 +46,11 @@
       <div class="container2-col1">
         <h1 class="col1-head">Live Casino Software<br /></h1>
         <p class="col1-para">
-          The world’s best selection of leading
+          We offer the most extensive range of top-tie
           <strong>Live Casino providers</strong><br>
         </p>
         <p>
-          The widest selection of live tables online and multi-channel
-          delivery.
+          globally, ensuring access to the widest variety of live tables online and a seamless multi-channel delivery experience.
         </p>
       </div>
 
@@ -75,12 +70,10 @@
       <div class="col2-text">
         <h1 class="col2-head">Casino Software Main features<br /></h1>
         <p class="casino_whites_sec_p">
-          Our <strong> software platform</strong> leads the market, giving
-          bookmakers complete control and visibility of their players from one
-          central location.<br /><br />
+          Our <strong> software platform</strong> stands at the forefront of the market, providing bookmakers with complete control and visibility over their players, all from a central hub.<br /><br />
         </p>
 
-        <p class="clasico_f">Features include:<br /><br /></p>
+        <p class="clasico_f">Key features of our platform include:<br /><br /></p>
 
         <ol class="updates_list">
           <li>Visibility and control over table ranges.</li>
@@ -97,19 +90,13 @@
           <li>API for external integration</li>
         </ol>
         <p class="casino_whites_sec_p">
-          Our customization tool allows bookmakers to change a variety of
-          elements of their live offerings in real time, <br />including
-          banners, fonts and colors with easy-to-use controls.
+          Our user-friendly customization tool empowers bookmakers to make real-time changes to various aspects of their live offerings, <br /> including banners, fonts, and color schemes, all with intuitive controls.
         </p>
         <p class="casino_whites_sec_p">
-          The new platform is an autonomous, agile and flexible system that
-          allows us to <br />respond directly to bookmakers’ requests and even
-          higher quality standards in our development of new and existing
-          <br />products.
+          Our new platform operates as an autonomous, agile, and flexible system. This agility allows us to promptly <br /> respond to bookmakers' requests and uphold higher quality standards when developing new and existing<br/> products.
         </p>
         <p class="casino_whites_sec_p">
-          In order to speed up your business, we offer <span routerLink="/casino" style="color: #a0c528;"> White Label Casino</span> with
-          more than 10,00 games.
+          To accelerate your business, we also offer a <span routerLink="/casino" style="color: #a0c528;"> White Label Casino</span> with a vast selection of over 10,000 games.
         </p>
 
         <div class="seprator" style="
@@ -134,11 +121,9 @@
           platforms through iFrame & APIs
         </h1>
         <p>
-          Our platform can be
-          <strong>integrated through iFrame or <br />APIs.</strong> It can
-          also be converted in, a full services integration, <br />a sports
-          betting solution or just casino games as well as live<br />
-          casino.
+          Our platform offers versatile integration options. You can seamlessly
+          <strong>integrated through iFrame or <br />APIs.</strong> it can be tailored to suit your specific needs, whether that's a comprehensive full-service integration, <br /> a specialized sports betting solution, or a focus on casino games, including live <br />
+          casino offerings.
         </p>
         <div class="seprator" style="
             height: 4px;
